--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
  * CoreUI - HTML, CSS, and JavaScript UI Components Library
- * @version v4.2.1
+ * @version v4.2.2
  * @link https://coreui.io/
  * Copyright (c) 2022 creativeLabs Łukasz Holeczek
  * License MIT  (https://coreui.io/license/)
@@ -462,11 +462,6 @@ legend + * {
 
 ::-webkit-color-swatch-wrapper {
   padding: 0;
-}
-
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
 }
 
 ::file-selector-button {
@@ -2278,22 +2273,6 @@ html:not([dir=rtl]) .offset-11 {
   border-color: #b1b7c1;
   opacity: 1;
 }
-.form-control::-webkit-file-upload-button {
-  padding: 0.375rem 0.75rem;
-  margin: -0.375rem -0.75rem;
-  -webkit-margin-end: 0.75rem;
-          margin-inline-end: 0.75rem;
-  color: var(--cui-form-file-button-color, rgba(44, 56, 74, 0.95));
-  background-color: var(--cui-form-file-button-bg, #d8dbe0);
-  pointer-events: none;
-  border-color: inherit;
-  border-style: solid;
-  border-width: 0;
-  border-inline-end-width: 1px;
-  border-radius: 0;
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
 .form-control::file-selector-button {
   padding: 0.375rem 0.75rem;
   margin: -0.375rem -0.75rem;
@@ -2310,16 +2289,9 @@ html:not([dir=rtl]) .offset-11 {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
-  .form-control::-webkit-file-upload-button {
-    -webkit-transition: none;
-    transition: none;
-  }
   .form-control::file-selector-button {
     transition: none;
   }
-}
-.form-control:hover:not(:disabled):not([readonly])::-webkit-file-upload-button {
-  background-color: var(--cui-form-file-button-hover-bg, #cdd0d5);
 }
 .form-control:hover:not(:disabled):not([readonly])::file-selector-button {
   background-color: var(--cui-form-file-button-hover-bg, #cdd0d5);
@@ -2350,12 +2322,6 @@ html:not([dir=rtl]) .offset-11 {
   font-size: 0.875rem;
   border-radius: 0.25rem;
 }
-.form-control-sm::-webkit-file-upload-button {
-  padding: 0.25rem 0.5rem;
-  margin: -0.25rem -0.5rem;
-  -webkit-margin-end: 0.5rem;
-          margin-inline-end: 0.5rem;
-}
 .form-control-sm::file-selector-button {
   padding: 0.25rem 0.5rem;
   margin: -0.25rem -0.5rem;
@@ -2368,12 +2334,6 @@ html:not([dir=rtl]) .offset-11 {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   border-radius: 0.5rem;
-}
-.form-control-lg::-webkit-file-upload-button {
-  padding: 0.5rem 1rem;
-  margin: -0.5rem -1rem;
-  -webkit-margin-end: 1rem;
-          margin-inline-end: 1rem;
 }
 .form-control-lg::file-selector-button {
   padding: 0.5rem 1rem;
@@ -2549,7 +2509,6 @@ html:not([dir=rtl]) .form-check .form-check-input {
      -moz-appearance: none;
           appearance: none;
   -webkit-print-color-adjust: exact;
-     color-adjust: exact;
           print-color-adjust: exact;
 }
 .form-check-input[type=checkbox] {
@@ -5547,12 +5506,6 @@ html:not([dir=rtl]) .alert-dismissible .btn-close {
   color: #262d37;
 }
 
-@-webkit-keyframes progress-bar-stripes {
-  0% {
-    background-position-x: 1rem;
-  }
-}
-
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5598,13 +5551,11 @@ html:not([dir=rtl]) .alert-dismissible .btn-close {
 }
 
 .progress-bar-animated {
-  -webkit-animation: 1s linear infinite progress-bar-stripes;
-          animation: 1s linear infinite progress-bar-stripes;
+  animation: 1s linear infinite progress-bar-stripes;
 }
 @media (prefers-reduced-motion: reduce) {
   .progress-bar-animated {
-    -webkit-animation: none;
-            animation: none;
+    animation: none;
   }
 }
 
@@ -6216,7 +6167,6 @@ html:not([dir=rtl]) .list-group-horizontal > .list-group-item + .list-group-item
 .toast-container {
   position: absolute;
   z-index: 1090;
-  width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   max-width: 100%;
@@ -7034,14 +6984,7 @@ html:not([dir=rtl]) .modal-header .btn-close {
   height: var(--cui-spinner-height);
   vertical-align: var(--cui-spinner-vertical-align);
   border-radius: 50%;
-  -webkit-animation: var(--cui-spinner-animation-speed) linear infinite var(--cui-spinner-animation-name);
-          animation: var(--cui-spinner-animation-speed) linear infinite var(--cui-spinner-animation-name);
-}
-
-@-webkit-keyframes spinner-border {
-  to {
-    transform: rotate(360deg) /* rtl:ignore */;
-  }
+  animation: var(--cui-spinner-animation-speed) linear infinite var(--cui-spinner-animation-name);
 }
 
 @keyframes spinner-border {
@@ -7064,16 +7007,6 @@ html:not([dir=rtl]) .modal-header .btn-close {
   --cui-spinner-width: 1rem;
   --cui-spinner-height: 1rem;
   --cui-spinner-border-width: 0.2em;
-}
-
-@-webkit-keyframes spinner-grow {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    opacity: 1;
-    transform: none;
-  }
 }
 
 @keyframes spinner-grow {
@@ -7836,14 +7769,7 @@ html:not([dir=rtl]) .offcanvas-header .btn-close {
 }
 
 .placeholder-glow .placeholder {
-  -webkit-animation: placeholder-glow 2s ease-in-out infinite;
-          animation: placeholder-glow 2s ease-in-out infinite;
-}
-
-@-webkit-keyframes placeholder-glow {
-  50% {
-    opacity: 0.2;
-  }
+  animation: placeholder-glow 2s ease-in-out infinite;
 }
 
 @keyframes placeholder-glow {
@@ -7856,15 +7782,7 @@ html:not([dir=rtl]) .offcanvas-header .btn-close {
           mask-image: linear-gradient(130deg, #000015 55%, rgba(0, 0, 0, 0.8) 75%, #000015 95%);
   -webkit-mask-size: 200% 100%;
           mask-size: 200% 100%;
-  -webkit-animation: placeholder-wave 2s linear infinite;
-          animation: placeholder-wave 2s linear infinite;
-}
-
-@-webkit-keyframes placeholder-wave {
-  100% {
-    -webkit-mask-position: -200% 0%;
-            mask-position: -200% 0%;
-  }
+  animation: placeholder-wave 2s linear infinite;
 }
 
 @keyframes placeholder-wave {
@@ -8082,7 +8000,6 @@ html:not([dir=rtl]) .callout {
 }
 
 .footer-sticky {
-  position: -webkit-sticky;
   position: sticky;
   bottom: 0;
   z-index: 1030;
@@ -8162,7 +8079,6 @@ html:not([dir=rtl]) .callout {
   min-height: calc(var(--cui-subheader-min-height) - 2 * var(--cui-header-padding-y));
 }
 .header.header-sticky {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 1029;
@@ -8512,7 +8428,6 @@ html:not([dir=rtl]) .sidebar.sidebar-end {
 }
 @media (min-width: 768px) {
   .sidebar.sidebar-sticky {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     height: 100vh;
@@ -8820,6 +8735,9 @@ html:not([dir=rtl]) .sidebar-nav .nav-icon:first-child {
 *[dir=rtl] .sidebar-nav .nav-icon:first-child {
   margin-right: calc(var(--cui-sidebar-nav-link-padding-x) * -1);
 }
+.sidebar-nav svg.nav-icon {
+  overflow: hidden;
+}
 .sidebar-nav .nav-group {
   position: relative;
   transition: background 0.15s ease-in-out;
@@ -9075,7 +8993,6 @@ html:not([dir=rtl]) .sidebar:not(.show).sidebar-self-hiding.sidebar-narrow.sideb
 }
 
 .subheader-sticky {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 1029;
@@ -9281,14 +9198,12 @@ html:not([dir=rtl]) .ratio > * {
 }
 
 .sticky-top {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 1020;
 }
 
 .sticky-bottom {
-  position: -webkit-sticky;
   position: sticky;
   bottom: 0;
   z-index: 1020;
@@ -9296,13 +9211,11 @@ html:not([dir=rtl]) .ratio > * {
 
 @media (min-width: 576px) {
   .sticky-sm-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
   }
   .sticky-sm-bottom {
-    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     z-index: 1020;
@@ -9310,13 +9223,11 @@ html:not([dir=rtl]) .ratio > * {
 }
 @media (min-width: 768px) {
   .sticky-md-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
   }
   .sticky-md-bottom {
-    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     z-index: 1020;
@@ -9324,13 +9235,11 @@ html:not([dir=rtl]) .ratio > * {
 }
 @media (min-width: 992px) {
   .sticky-lg-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
   }
   .sticky-lg-bottom {
-    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     z-index: 1020;
@@ -9338,13 +9247,11 @@ html:not([dir=rtl]) .ratio > * {
 }
 @media (min-width: 1200px) {
   .sticky-xl-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
   }
   .sticky-xl-bottom {
-    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     z-index: 1020;
@@ -9352,13 +9259,11 @@ html:not([dir=rtl]) .ratio > * {
 }
 @media (min-width: 1400px) {
   .sticky-xxl-top {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1020;
   }
   .sticky-xxl-bottom {
-    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     z-index: 1020;
@@ -9571,7 +9476,6 @@ html:not([dir=rtl]) .float-none {
 }
 
 .position-sticky {
-  position: -webkit-sticky !important;
   position: sticky !important;
 }
 
@@ -14280,4 +14184,24 @@ html:not([dir=rtl]) .wrapper {
   .wrapper {
     transition: none;
   }
+}
+
+.group-border-ltr > .input-group-text {
+  border-bottom-left-radius: 5px !important;
+  border-top-left-radius: 5px !important;
+}
+
+.group-border-ltr > .form-control {
+  border-bottom-right-radius: 5px !important;
+  border-top-right-radius: 5px !important;
+}
+
+.group-border-rtl > .input-group-text {
+  border-bottom-right-radius: 5px !important;
+  border-top-right-radius: 5px !important;
+}
+
+.group-border-rtl > .form-control {
+  border-bottom-left-radius: 5px !important;
+  border-top-left-radius: 5px !important;
 }
